--- a/COP2000_Module2.ipynb
+++ b/COP2000_Module2.ipynb
@@ -65,7 +65,7 @@
       "cell_type": "code",
       "source": [
         "from IPython.display import YouTubeVideo\n",
-        "YouTubeVideo('4o7U2X2oGoM', width=800, height=300)"
+        "YouTubeVideo('2Yz9ybOmjl8', width=800, height=300)"
       ],
       "metadata": {
         "colab": {
@@ -107,7 +107,7 @@
       "source": [
         "\n",
         "from IPython.display import YouTubeVideo\n",
-        "YouTubeVideo('HO1lGV3onAU', width=800, height=300)"
+        "YouTubeVideo('FBlu1-5Jqoo', width=800, height=300)"
       ],
       "metadata": {
         "colab": {
@@ -149,7 +149,7 @@
       "source": [
         "\n",
         "from IPython.display import YouTubeVideo\n",
-        "YouTubeVideo('xipXjlebJjw', width=800, height=300)"
+        "YouTubeVideo('cuk0Vg2LIS4', width=800, height=300)"
       ],
       "metadata": {
         "colab": {
@@ -191,7 +191,7 @@
       "source": [
         "\n",
         "from IPython.display import YouTubeVideo\n",
-        "YouTubeVideo('E9Z7450Mp6I', width=800, height=300)"
+        "YouTubeVideo('__B7kk48Urs', width=800, height=300)"
       ],
       "metadata": {
         "colab": {
